<resources>
    <string name="app_name">Registration App</string>
    <string name="email">E-mail</string>
    <string name="id">Student ID</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="button">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
</resources>